--- a/myresume2.tex
+++ b/myresume2.tex
@@ -9,9 +9,9 @@
 \begin{document}
 
 
-\namesection{Shaunak Tulshibagwale}{\href{mailto:shaun.tul@gmail.com}{shaun.tul@gmail.com}
+\namesection{Firstname Lastname}{\href{mailto:example@example.com}{example@example.com}
 
-408.642.9450
+XXX.XXX.XXXX
 
 \href{https://linkedin.com/in/shaunakt}{/in/shaunakt}}
 
